--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     passível de tratamento de regeneração. Seu descarte implica em um custo muito inferior ao do óleo mineral. </p>
                 <figure>
                     <img src="img/energia-placeholder.jpg" alt="">
-                    <figcaption>Imagem: Acervo privado I A Oliveira - Fundador Augusto Oliveira</figcaption>
+                    <figcaption><span class="bold">Imagem:</span> Acervo privado I A Oliveira - Fundador Augusto Oliveira</figcaption>
                 </figure>
             </div>
             <div class="timeline">
@@ -140,14 +140,14 @@
         </section>
 
         <section id="projects" class="projects-section section-padding">
-            <h2>Reali&shy;zações</h2>
-            <h2 class="small-title">Projetos</h2>
+            <h2 class="small-title">Reali&shy;zações</h2>
+            <h3>Projetos</h3>
             <p class="large number"><span>+</span>375.220</p>
         </section>
 
         <section id="clients" class="clients-section section-padding">
             <div class="clients-title--wrapper">
-                <h2 class="small-title">Clientes</h2>
+                <h3 class="small-title">Clientes</h3>
                 <p class="medium number"><span>+</span>12.000</p>
             </div>
             <div class="logos--grid">
@@ -168,7 +168,7 @@
         </section>
 
         <section id="suppliers" class="suppliers-section section-padding">
-            <h2 class="small-title">Forne&shy;cedores</h2>
+            <h3 class="small-title hr-line">Forne&shy;cedores<span></span></h3>
             <div class="logos--grid">
                 <img src="img/fornecedores/onix.png" alt="">
                 <img src="img/fornecedores/romagnole.png" alt="">
@@ -188,25 +188,25 @@
         </section>
 
         <section id="services" class="services-section section-padding">
-            <h2 class="small-title">Serviços</h2>
+            <h2 class="small-title hr-line"><span></span>Serviços</h2>
             <ul class="list">
-                <li class="list-item">Projetos de instalações elétricas média e alta tensão</li>              
-                <li class="list-item">Manutenção de sistemas elétricos</li>
-                <li class="list-item">Estudos de eficiência energética em média e alta tensão</li>
-                <li class="list-item">Consertos de transformadores de média e alta tensão até 2.500KVA</li>                     
-                <li class="list-item">Negociação de contratos de fornecimento com concessionárias</li>
-                <li class="list-item">Consultoria em sistemas elétricos</li>
-                <li class="list-item">Reforma e adequação de subestações às normas vigentes</li>
-                <li class="list-item">Ligação nova e aumento de carga em subestações</li>
-                <li class="list-item">Aplicação de padrões técnicos de acordo com as normas</li>
-                <li class="list-item">Ensaios dielétricos de classes [15 KV,25KV, 36KV]</li>
-                <li class="list-item">Termografia</li>
-                <li class="list-item">SPDA</li>
-                <li class="list-item">Estudo/orçamento referente a redução de custos desnecessários como energia reativa (instalação de banco de capacitores)</li>               
-                <li class="list-item">Migração para o mercado livre de energia</li>
-                <li class="list-item">Gestão de faturas</li>
-                <li class="list-item">Instalação e implantação de projetos de sistema solar</li>      
-                <li class="list-item">Ultrapassagem entre outras cobranças indevidas em sua conta</li> 
+                <li class="list-item hr-line">Projetos de instalações elétricas média e alta tensão<span></span></li>              
+                <li class="list-item hr-line">Manutenção de sistemas elétricos<span></span></li>
+                <li class="list-item hr-line">Estudos de eficiência energética em média e alta tensão<span></span></li>
+                <li class="list-item hr-line">Consertos de transformadores de média e alta tensão até 2.500KVA<span></span></li>                     
+                <li class="list-item hr-line">Negociação de contratos de fornecimento com concessionárias<span></span></li>
+                <li class="list-item hr-line">Consultoria em sistemas elétricos<span></span></li>
+                <li class="list-item hr-line">Reforma e adequação de subestações às normas vigentes<span></span></li>
+                <li class="list-item hr-line">Ligação nova e aumento de carga em subestações<span></span></li>
+                <li class="list-item hr-line">Aplicação de padrões técnicos de acordo com as normas<span></span></li>
+                <li class="list-item hr-line">Ensaios dielétricos de classes [15 KV,25KV, 36KV]<span></span></li>
+                <li class="list-item hr-line">Termografia<span></span></li>
+                <li class="list-item hr-line">SPDA<span></span></li>
+                <li class="list-item hr-line">Estudo/orçamento referente a redução de custos desnecessários como energia reativa (instalação de banco de capacitores)<span></span></li>               
+                <li class="list-item hr-line">Migração para o mercado livre de energia<span></span></li>
+                <li class="list-item hr-line">Gestão de faturas<span></span></li>
+                <li class="list-item hr-line">Instalação e implantação de projetos de sistema solar<span></span></li>      
+                <li class="list-item hr-line">Ultrapassagem entre outras cobranças indevidas em sua conta<span></span></li> 
             </ul>
         </section>
 
@@ -214,7 +214,7 @@
             <div class="structure-text--wrapper">
                 <h2 class="small-title">Estrutura</h2>
                 <img src="img/estrutura.svg" class="structure-graphic"></img>
-                <small>Possuímos oficina e escritórios localizados no Rio de Janeiro. Pronto atendimento ágil, com os menores prazos do mercado.</small>
+                <p>Possuímos oficina e escritórios localizados no Rio de Janeiro. Pronto atendimento ágil, com os menores prazos do mercado.</p>
             </div>
             <ul class="list">             
                 <li class="list-item">Frota própria de veículos como caminhão Munch e cesto aéreo</li>
