removed span tags from list items

--- a/index.html
+++ b/index.html
@@ -190,23 +190,23 @@
         <section id="services" class="services-section section-padding">
             <h2 class="small-title hr-line"><span></span>Serviços</h2>
             <ul class="list">
-                <li class="list-item hr-line">Projetos de instalações elétricas média e alta tensão<span></span></li>              
-                <li class="list-item hr-line">Manutenção de sistemas elétricos<span></span></li>
-                <li class="list-item hr-line">Estudos de eficiência energética em média e alta tensão<span></span></li>
-                <li class="list-item hr-line">Consertos de transformadores de média e alta tensão até 2.500KVA<span></span></li>                     
-                <li class="list-item hr-line">Negociação de contratos de fornecimento com concessionárias<span></span></li>
-                <li class="list-item hr-line">Consultoria em sistemas elétricos<span></span></li>
-                <li class="list-item hr-line">Reforma e adequação de subestações às normas vigentes<span></span></li>
-                <li class="list-item hr-line">Ligação nova e aumento de carga em subestações<span></span></li>
-                <li class="list-item hr-line">Aplicação de padrões técnicos de acordo com as normas<span></span></li>
-                <li class="list-item hr-line">Ensaios dielétricos de classes [15 KV,25KV, 36KV]<span></span></li>
-                <li class="list-item hr-line">Termografia<span></span></li>
-                <li class="list-item hr-line">SPDA<span></span></li>
-                <li class="list-item hr-line">Estudo/orçamento referente a redução de custos desnecessários como energia reativa (instalação de banco de capacitores)<span></span></li>               
-                <li class="list-item hr-line">Migração para o mercado livre de energia<span></span></li>
-                <li class="list-item hr-line">Gestão de faturas<span></span></li>
-                <li class="list-item hr-line">Instalação e implantação de projetos de sistema solar<span></span></li>      
-                <li class="list-item hr-line">Ultrapassagem entre outras cobranças indevidas em sua conta<span></span></li> 
+                <li class="list-item">Projetos de instalações elétricas média e alta tensão</li>              
+                <li class="list-item">Manutenção de sistemas elétricos</li>
+                <li class="list-item">Estudos de eficiência energética em média e alta tensão</li>
+                <li class="list-item">Consertos de transformadores de média e alta tensão até 2.500KVA</li>                     
+                <li class="list-item">Negociação de contratos de fornecimento com concessionárias</li>
+                <li class="list-item">Consultoria em sistemas elétricos</li>
+                <li class="list-item">Reforma e adequação de subestações às normas vigentes</li>
+                <li class="list-item">Ligação nova e aumento de carga em subestações</li>
+                <li class="list-item">Aplicação de padrões técnicos de acordo com as normas</li>
+                <li class="list-item">Ensaios dielétricos de classes [15 KV,25KV, 36KV]</li>
+                <li class="list-item">Termografia</li>
+                <li class="list-item">SPDA</li>
+                <li class="list-item">Estudo/orçamento referente a redução de custos desnecessários como energia reativa (instalação de banco de capacitores)</li>               
+                <li class="list-item">Migração para o mercado livre de energia</li>
+                <li class="list-item">Gestão de faturas</li>
+                <li class="list-item">Instalação e implantação de projetos de sistema solar</li>      
+                <li class="list-item">Ultrapassagem entre outras cobranças indevidas em sua conta</li> 
             </ul>
         </section>
 
